--- a/Abhishek_ERA_V1_S2.ipynb
+++ b/Abhishek_ERA_V1_S2.ipynb
@@ -270,7 +270,7 @@
         "    x = self.pool1(F.relu(self.conv2(F.relu(self.conv1(x)))))   # performs conv1 -> relu -> conv2 -> relu -> pool1\n",
         "    x = self.pool2(F.relu(self.conv4(F.relu(self.conv3(x)))))   # performs conv3 -> relu -> conv4 -> relu -> pool2\n",
         "    x = F.relu(self.conv6(F.relu(self.conv5(x))))               # performs conv5 -> relu -> conv6 -> relu\n",
-        "    x = F.relu(self.conv7(x))                                   # performs conv7 \n",
+        "    x = (self.conv7(x))                                   # performs conv7 \n",
         "    x = x.view(-1, 10)                                          # similar to reshape in numpy\n",
         "\n",
         "    # x = torch.flatten(x, 1)\n",
@@ -286,7 +286,7 @@
       "metadata": {
         "id": "Sir2LmSVLr_4"
       },
-      "execution_count": 6,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -297,7 +297,7 @@
       "metadata": {
         "id": "sxICO4TTNt2H"
       },
-      "execution_count": 7,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -311,9 +311,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M__MtFIYNwXa",
-        "outputId": "f3f9e2cd-f264-4dca-c161-c1a07d371069"
+        "outputId": "fded926b-42dd-46c5-f934-e7b72a3bfeb3"
       },
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,7 +347,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-6-821ce71605c6>:42: UserWarning: Implicit dimension choice for log_softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+            "<ipython-input-14-81b643483a77>:50: UserWarning: Implicit dimension choice for log_softmax has been deprecated. Change the call to include dim=X as an argument.\n",
             "  return F.log_softmax(x)\n"
           ]
         }
@@ -414,7 +414,7 @@
       "metadata": {
         "id": "g_vlC-bdNzo1"
       },
-      "execution_count": 9,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -432,17 +432,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a0FYVWkGOFBS",
-        "outputId": "4c104172-fae2-413e-c4fb-e024c8acece0"
+        "outputId": "e3207333-808d-40d7-aced-fb2999d51bbf"
       },
-      "execution_count": 10,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r  0%|          | 0/469 [00:00<?, ?it/s]<ipython-input-6-821ce71605c6>:42: UserWarning: Implicit dimension choice for log_softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+            "  0%|          | 0/469 [00:00<?, ?it/s]<ipython-input-14-81b643483a77>:50: UserWarning: Implicit dimension choice for log_softmax has been deprecated. Change the call to include dim=X as an argument.\n",
             "  return F.log_softmax(x)\n",
-            "loss=0.5803605914115906 batch_id=468: 100%|██████████| 469/469 [00:31<00:00, 14.86it/s]\n"
+            "loss=0.021049566566944122 batch_id=468: 100%|██████████| 469/469 [00:30<00:00, 15.35it/s]\n"
           ]
         },
         {
@@ -450,7 +450,7 @@
           "name": "stdout",
           "text": [
             "\n",
-            "Test set: Average loss: 0.7298, Accuracy: 7015/10000 (70%)\n",
+            "Test set: Average loss: 0.0573, Accuracy: 9825/10000 (98%)\n",
             "\n"
           ]
         }
