--- a/Session-7/Model-4/ERA_Session7_Model4.ipynb
+++ b/Session-7/Model-4/ERA_Session7_Model4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOicUFuL9Om34ss7d8NEGSQ",
+      "authorship_tag": "ABX9TyOvjkGeZXy5PJWd3VOobj/B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,15 +33,15 @@
       "source": [
         "## 1. Target\n",
         "\n",
-        "- Fine Tune the Transforms, set rotation to `-10deg to 10deg`\n",
+        "- Fine Tune the Transforms, set rotation to `-7deg to 7deg`\n",
         "- Include StepLR rate schedule\n",
-        "- Optimize the learning rate and drop out value\n",
+        "- Optimize the learning rate\n",
         "\n",
         "## 2. Result\n",
         "\n",
         "- Params: `7,416`\n",
         "- Best Train Accuracy: `99.06%`\n",
-        "- Best Test Accuracy : `99.45%`\n",
+        "- Best Test Accuracy : `99.43%`\n",
         "\n",
         "## 3. Analysis\n",
         "\n",
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "ARho5NLUe3kU"
       },
@@ -87,7 +87,7 @@
       "metadata": {
         "id": "GbJjInE-e79K"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,7 +103,7 @@
         "id": "RLTdy5gkfFzg",
         "outputId": "c78ecb67-a870-410f-cf1f-ba0f54e25eb0"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +212,7 @@
         "id": "wju41vXQfGqr",
         "outputId": "318cbb0f-2a56-4a39-807f-b853a8ef8081"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,7 +323,7 @@
       "metadata": {
         "id": "4kAIc2lrfKAR"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -344,7 +344,7 @@
         "id": "1zLbEEpQfOoz",
         "outputId": "cb4915ab-0078-4aca-dacf-a9e30c2a2cf6"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,7 +464,7 @@
       "metadata": {
         "id": "lEk2BVoIfQD0"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -490,7 +490,7 @@
         "id": "AKGLzUn1fWGA",
         "outputId": "3b82d9de-0bfc-463c-8531-10b97dc9d6dc"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -779,7 +779,7 @@
         "id": "CaxDcTSzfYCM",
         "outputId": "903582d2-cd36-407f-bda9-2d9ce3a3e9a3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
