--- a/Session-7/Model-3/ERA_Session7_Model3.ipynb
+++ b/Session-7/Model-3/ERA_Session7_Model3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNhtI/5b/SB+XDA7UtVEn5l",
+      "authorship_tag": "ABX9TyMvraM/tBAOM5Cigza2fD/d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,17 +38,15 @@
         "\n",
         "> Sets the learning rate of each parameter group according to the 1cycle learning rate policy. The 1cycle policy anneals the learning rate from an initial learning rate to some maximum learning rate and then from that maximum learning rate to some minimum learning rate much lower than the initial learning rate. This policy was initially described in the paper **Super-Convergence: Very Fast Training of Neural Networks Using Large Learning Rates.**\n",
         "\n",
-        "> The 1cycle learning rate policy changes the learning rate after every batch. step should be called after a batch has been used for training.\n",
-        "\n",
         "## 2. Result\n",
         "\n",
         "- Params: `9,962`\n",
         "- Best Train Accuracy: `98.12%`\n",
-        "- Best Test Accuracy : `99.43%`\n",
+        "- Best Test Accuracy : `98.80%`\n",
         "\n",
         "## 3. Analysis\n",
         "\n",
-        "- Now the learning is consistent, the accuracy increases"
+        "- Now the learning is consistent, however the accuracy decreases(Not sure of the correct usage of OneCycleLR)"
       ],
       "metadata": {
         "id": "V6BGE4bRddYT"
@@ -56,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
